--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "he": "^1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "wouter": "^2.8.0-alpha.2"
   },
   "devDependencies": {
