--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
-    "wouter": "^2.8.0-alpha.2"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
