--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-youtube": "^9.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
