--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.9.1",
     "he": "^1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
